@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 46f53112264a5e11ae74f8b46442de7369b7ad3e ChangeLog
+SHA1 11d128bff9d0a67f679b39f5fe29013b64073c58 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 1637e48a758c3b4785c03392d4d462193b4b6dcd META.yml
-SHA1 db9cfb56a382e0aa668da4dbc06e162067f25fee Makefile.PL
+SHA1 913c5a29aff513c2e66e91c9d68c8c8719ce19f0 META.yml
+SHA1 15a38684670285f8872ab2fc7b608fc52833a7f1 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 b65ed5679b6285dfaae174d18f355f1530c1944f lib/Net/FullAuto.pm
+SHA1 98d766f86b0a1927cb25252ad64ac49af76e7431 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJT2E11AAoJEBa/9Pad787EVo4IAKeni2s+n7aRhWjaI+yAiq1L
-alZtEx1/Dgeq2itpbtkRw382g8/V75MjCKWnwApHFlnH6yufhs9QKNF806Qvun0M
-1GHIcFjSejbajxnSJUa3XO6uEHrbJ7kPk7Gw4073PtNg918B3PoRJIbv1grS4Hyx
-WW8B/zcBbCn1YOnkGprrDFcPBPL34JvHo26TkWpYSMHZv0YdclZlSg8P3g20oBmh
-kNPG4lANgESQl7ZyekTVPOU+xnYz8CPlyPdLS5dRjQSCw8INwUXKa/9PPgFo106H
-CkEgbrhIZzjXjkltTKhSx4Yd1ATl39ijAzoGmid3AycbC1UwoaOtK+CufRc2AYo=
-=F7ki
+iQEcBAEBAgAGBQJT2FJiAAoJEBa/9Pad787E7vsH/1oRRjZwJAEynWMtFC3LU1Qm
+XY7As7/2SQv3kOypVmetdqBa8zGXIcsDoaRQ0dQNSUtW+eHclbUt3VyO+Gb2PWqO
+pCkm+yTDHuMmsL8JlvoC7AK83eWSX90jmxcx+93SVWzVBy2B9xujwMJG5CtzscIt
+IIvD6WjmCQ+1lssfmMXIPVIhWYwszM+QbuKu2t/jRFooY1WwNv5MlhB8Zjo/KRIu
+mGwYxLqaDxs06fmywBsxg0kJolzTtaalm379sF8uhbz38qpoMZ9E7DmPugPVyqd1
+yOUtFAJUKx/Ppsw9dRl0uv+GsBECYCIzY1bWPvqwitLBggixHzpxqAPS4UoPRH4=
+=RaOa
 -----END PGP SIGNATURE-----
