@@ -22,6 +22,13 @@
 
 2014-07-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999992 released.
+
+        * Test Gzip Fix for Amazon RHEL.
+
+
+2014-07-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999991 released.
 
         * Test Gzip Fix for Amazon RHEL.
